# readiq-backend

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: api_auth.py  api_books.py  api_chat.py  api_comments.py  api_ingest.py  auth.py  config.py  db.py  deps.py  models.py  queue.py  repository.py  upload.py
db/: schema_website_v1.sql
