[project]
name = "readiq-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29",
    "fastapi>=0.110",
    "pgvector>=0.2.5",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
]
